<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hiwin_libmodbus</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="N2107687J@e.ntu.edu.sg">andy</maintainer>
  <license>BSD-2.0</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>
  <depend>hiwin_interfaces</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- <depend>rospy</depend> -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
